# Cosmic_Barage_UBISOFT_NEXT_2026

./: README.md
UbisoftTorontoAPI_DEC102025Update/: CMakeLists.txt  README.MD  TC-apple.cmake  TC-windows.cmake  generate-macos.sh  generate-windows.bat
UbisoftTorontoAPI_DEC102025Update/data/ContestAPIConfig/: gamecontrollermappings.txt
UbisoftTorontoAPI_DEC102025Update/src/ContestAPI/: AppSettings.h  SimpleController.cpp  SimpleController.h  SimpleSound.cpp  SimpleSound.h  SimpleSprite.cpp  SimpleSprite.h  app.cpp  app.h  freeglut_config.h  main.cpp  main.h
UbisoftTorontoAPI_DEC102025Update/src/Game/: Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h  Enemy.cpp  Enemy.h  EnemyCharger.cpp  EnemyCharger.h  EnemyManager.cpp  EnemyManager.h  EnemyMinion.cpp  EnemyMinion.h  EnemySplatter.cpp  EnemySplatter.h  GameManager.cpp  GameManager.h  GameTest.cpp  Player.cpp  Player.h  Timer.cpp  Timer.h  UI.cpp  UI.h
